--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="container2">
                 <div class="love" >
                     <div class="love-img">
-                        <img src="./img/Love.png">
+                        <img src="./img/love.png">
                     </div>
                     <div class="special-container">
                         <div class="special-1">
